--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,8 @@
   <%= @product.description %>
 <% end %>
 
+<%= image_tag @product.featured_image if @product.featured_image.attached? %>
+
 <%= link_to "Back", products_path %>
 <% if authenticated? %>
   <%= link_to "Edit", edit_product_path(@product) %>
